--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@angular/platform-browser": "10.1.4",
     "@angular/platform-browser-dynamic": "10.1.4",
     "@angular/router": "10.1.4",
+    "@ngxs/logger-plugin": "^3.7.3",
+    "@ngxs/store": "^3.7.3",
     "rxjs": "6.6.3",
     "tslib": "^2.0.1",
     "zone.js": "0.10.2"
